style: small fixel align

--- a/frontend/src/components/MyProfileContent/MyProfileContent.css
+++ b/frontend/src/components/MyProfileContent/MyProfileContent.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 20px;
+    /* padding: 20px; */
     gap: 40px;
     justify-content: center;
 }
